Added multithreading, sort of